  in #-style comments that do not start a command line
- Fix bug: "eval" not working correctly for anonymous strings
- Support a matrix as an element-wise boolean condition for the 
  ternary "?" operator
- The msortby() function: ensure that it performs a "stable" 
  sort, such that rows sharing a common key value are never 
  interchanged

2012-11-05 version 1.9.10
- Update translations
- Major new command "join": this adds sophisticated procedures for 
  assembling a dataset from multiple sources
- New command "markers": manipulate observation marker strings
- "delete" command: add a --force option to permit deletion of
  series in loops (to be used with caution!)
- "data" command: allow this in loops
- "open" command: rename the option for reading fixed format data
  from --cols to --fixed-cols; also allow use of this command
  in loops (gretlcli only)
- "dpanel" and "arbond" commands: indicate in the model printout 
  if the AR, Sargan or Wald tests failed
- "gnuplot" command: add a --with-lp option to use linespoints
- "modtest" command: support the autocorrelation option for ARMA
  models, using the Ljung-Box statistic
- "boxplot" command: add a --matrix option (works in the same way
  as with the "gnuplot" command)
- "freq" command: add a --matrix option to select a column from a
  named matrix instead of a series
- "corrgm" command: make the $test and $pvalue accessors available 
  for the Ljung-Box test at the maximum lag
- "xtab" command: use string values of variables if available
- Add three new functions: ghk(), halton() and isnan()
- The mread() function now allows leading #-comment lines in the
  plain text file from which a matrix is read
- Add two new accessors: $pi and $huge
- Fix for ARMA forecasts: ensure that the dynamic portion starts
  as soon as possible when the --dynamic option is given
- Switch to using libcurl for HTTP transaction support
- Add two new element-wise matrix operators, ".>=" and ".<=",