@@ -296,7 +296,6 @@ struct str_table funcs[] = {
     { F_NRMAX,    "NRmax" },
     { F_OBSNUM,   "obsnum" },
     { F_ISSERIES, "isseries" },
-    { F_ISSCALAR, "isscalar" },
     { F_ISLIST,   "islist" },
     { F_ISSTRING, "isstring" },
     { F_ISNULL,   "isnull" },
